# PyCOOLC

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
PyCOOLC/: __init__.py  lexer.py  parser.py
coolc/: coolc
docs/: CFG.md  Grammar.md
example_cool_programs/: README.md
examples/: README.md  complex.cl  hello_world.s  new_complex.cl
pycoolc/: __init__.py  ast.py  codegen.py  lexer.py  parser.py  py.typed  pycoolc.py  semanalyser.py  semanter.py  utils.py
pycoolc/ir/: __init__.py  cfg.py  ssa.py  tac.py  translator.py
pycoolc/optimization/: __init__.py  constant_prop.py  dataflow.py  liveness.py
src/: parser.py  pycoolc.py
tests/: test_ast.py  test_codegen.py  test_integration.py  test_lexer.py  test_parser.py  test_pycoolc.py  test_semanalyser.py  test_utils.py
tests/ir/: __init__.py  test_cfg.py  test_ssa.py  test_tac.py  test_translator.py
tests/optimization/: __init__.py  test_constant_prop.py  test_dataflow.py  test_liveness.py
