[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycoolc"
version = "0.1.0"
description = "An educational COOL compiler targeting MIPS, written in Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ahmad Alhour", email = "a.z.alhour@gmail.com"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "ply>=3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "deadcode>=2.4",
]

[project.scripts]
pycoolc = "pycoolc.pycoolc:main"

[project.urls]
Homepage = "https://github.com/aalhour/pycoolc"
Repository = "https://github.com/aalhour/pycoolc"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pycoolc"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.deadcode]
exclude = ["venv", ".venv", "tests", "examples", "docs", "misc", "bin"]
# PLY (Python Lex-Yacc) uses naming conventions for lexer/parser rules
# These are called via introspection, not direct calls
ignore_names = [
    "t_*",              # PLY token rules
    "p_*",              # PLY grammar rules  
    "precedence",       # PLY precedence table
    "reserved",         # PLY reserved words
    "states",           # PLY lexer states
    "t_ignore*",        # PLY ignore patterns
]
