[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycoolc"
version = "1.0.0"
description = "An educational COOL compiler targeting MIPS, written in Python"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Ahmad Alhour", email = "a.z.alhour@gmail.com"}
]
maintainers = [
    {name = "Ahmad Alhour", email = "a.z.alhour@gmail.com"}
]
keywords = [
    "compiler",
    "cool",
    "mips",
    "education",
    "programming-language",
    "lexer",
    "parser",
    "code-generation",
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "ply>=3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.14.10",
    "pre-commit>=3.0",
]

[project.scripts]
pycoolc = "pycoolc.pycoolc:main"

[project.urls]
Homepage = "https://github.com/aalhour/pycoolc"
Repository = "https://github.com/aalhour/pycoolc"
Documentation = "https://github.com/aalhour/pycoolc#readme"
Issues = "https://github.com/aalhour/pycoolc/issues"
Changelog = "https://github.com/aalhour/pycoolc/releases"

[tool.setuptools]
packages = ["pycoolc", "pycoolc.ir", "pycoolc.optimization"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

# =============================================================================
# Ruff - Linting and Formatting
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    # PLY generated files
    "lextab.py",
    "yacctab.py",
    "parsetab.py",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (PLY uses this pattern)
    "SIM102", # nested if statements (sometimes clearer than combined)
    "SIM108", # ternary instead of if-else (not always clearer)
    "SIM113", # enumerate for index (not always cleaner)
    "UP007",  # Use X | Y for Union (wait for broader adoption)
    "RUF001", # ambiguous unicode in string (we use math symbols intentionally)
    "RUF002", # ambiguous unicode in docstring (we use ⊤ ⊥ ∪ for lattice theory)
    "RUF003", # ambiguous unicode in comment (same reason)
    "RUF043", # raw strings in pytest match= (works fine without)
    "TC001",  # type-checking imports (not worth the complexity)
    "TC003",  # stdlib type-checking imports (same reason)
    "UP046",  # Generic[T] syntax (keep traditional for compatibility)
    "B905",   # zip strict= (not all Python 3.12 environments have it)
]

[tool.ruff.lint.per-file-ignores]
# PLY lexer/parser use specific naming conventions and patterns
"pycoolc/lexer.py" = ["F841", "E741"]  # unused variables, ambiguous names (t, p)
"pycoolc/parser.py" = ["F841", "E741"] # same for parser
# Tests can have longer functions and more assertions
"tests/**/*.py" = ["B017", "B018"]     # pytest assertions patterns

[tool.ruff.lint.isort]
known-first-party = ["pycoolc"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:ply.*:",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["pycoolc"]
branch = true
omit = [
    "pycoolc/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

# =============================================================================
# MyPy
# =============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "lextab\\.py$",
    "yacctab\\.py$",
    "parsetab\\.py$",
    "tests/",
]
